--- a/manifest.json
+++ b/manifest.json
@@ -25,8 +25,8 @@
     {
       "matches": ["<all_urls>"],
       "css": [
-        "universal-debug-from-log-file.css",
-        "jquery-ui-1.12.1.custom/jquery-ui.css"
+        "jquery-ui-1.12.1.custom/jquery-ui.css",
+        "universal-debug-from-log-file.css"
       ],
       "js": [
         "jquery-3.1.1.min.js",
